--- a/openassessment/templates/openassessmentblock/staff_area/oa_staff_grade_learners_assessment.html
+++ b/openassessment/templates/openassessmentblock/staff_area/oa_staff_grade_learners_assessment.html
@@ -42,6 +42,13 @@
                 </div>
 
                 <ul class="list list--actions">
+
+                    <li class="list--actions__item submit_assessment--action">
+                        <button type="submit" class="action action--return_back">
+                            {% trans "Return back" %}
+                        </button>
+                    </li>
+
                     <li class="list--actions__item submit_assessment--action">
                         <button type="submit" class="action action--submit" disabled>
                             {% trans "Submit assessment" %}
