Add styles and remove unnecessary lines

--- a/openassessment/xblock/static/sass/oa/utilities/_extends.scss
+++ b/openassessment/xblock/static/sass/oa/utilities/_extends.scss
@@ -89,6 +89,11 @@
     border-top-color: $action-primary-color;
   }
 
+  // STATE: is returned
+  &.is--returned {
+    border-top-color: $uxpl-warning-accent;
+  }
+
   // STATE: is complete
   &.is--complete {
     border-top-color: $color-complete;
