--- a/openassessment/templates/openassessmentblock/staff_area/oa_staff_grade_learners_assessment.html
+++ b/openassessment/templates/openassessmentblock/staff_area/oa_staff_grade_learners_assessment.html
@@ -44,7 +44,7 @@
                 <ul class="list list--actions">
 
                     <li class="list--actions__item submit_assessment--action">
-                        <button type="submit" class="action action--return_back">
+                        <button type="submit" class="action action--return_back" disabled>
                             {% trans "Return back" %}
                         </button>
                     </li>
