--- a/openassessment/templates/openassessmentblock/response/oa_response.html
+++ b/openassessment/templates/openassessmentblock/response/oa_response.html
@@ -145,8 +145,8 @@
                             <label class="sr" for="submission_answer_upload_{{ xblock_id }}">{% trans "Select a file to upload for this submission." %}</label>
                             <input type="file" class="submission__answer__upload file--upload ora-file-input" id="submission_answer_upload_{{ xblock_id }}" multiple="" hidden>
                             <div class="ora-upload-field">
-                                <button class="btn-primary ora-upload-btn" style="padding-bottom: 10px">{% trans "Choose Files" %}</button>
-                                <span class="ora-upload-title" style="padding-left: 10px">{% trans "No file chosen" %}</span>
+                                <button class="btn-primary ora-upload-btn">{% trans "Choose Files" %}</button>
+                                <span class="ora-upload-title">{% trans "No file chosen" %}</span>
                             </div>
 
                             <button type="submit" class="file__upload action action--upload" disabled>{% trans "Upload files" %}</button>
