Add assessment list for staff review

--- a/openassessment/xblock/static/sass/oa/utilities/_shame.scss
+++ b/openassessment/xblock/static/sass/oa/utilities/_shame.scss
@@ -147,7 +147,8 @@
   .action--submit,
   .action--return_back,
   .action--save,
-  .action--upload {
+  .action--upload,
+  .action--close {
     text-shadow: none !important;
     box-shadow: none !important;
   }
