--- a/openassessment/templates/openassessmentblock/staff_area/oa_staff_area.html
+++ b/openassessment/templates/openassessmentblock/staff_area/oa_staff_area.html
@@ -125,11 +125,7 @@
             <h2 class="staff-grading__title ui-staff__title">
                 <span class="staff-info__title__copy">{% trans "Grade Available Responses" %}</span>
             </h2>
-
-            <div class="staff-info__content ui-staff__content">
-                {% include "openassessmentblock/staff_area/oa_staff_grade_learners.html" with staff_assessment_ungraded=staff_assessment_ungraded %}
-            </div>
-
+            <div class="staff-info__content ui-staff__content"></div>
         </div>
     </div>
     {% endif %}
