--- a/openassessment/templates/openassessmentblock/staff_area/oa_staff_grade_learners_assessment.html
+++ b/openassessment/templates/openassessmentblock/staff_area/oa_staff_grade_learners_assessment.html
@@ -1,69 +1,102 @@
 {% load i18n %}
 {% spaceless %}
 
-    <div class="staff__grade__form" data-submission-uuid="{{ submission.uuid }}">
-        <div class="wrapper--staff-assessment">
-            <div>
-                <p>{% trans "Give this learner a grade using the problem's rubric." %}</p>
-            </div>
 
-            <div>
-                <article class="staff-assessment">
-                    <div class="staff-assessment__display">
-                        <header class="staff-assessment__display__header">
-                            <h4 class="staff-assessment__display__title">
-                                {% if student_email %}
-                                    {% blocktrans %}
-                                        Response for: {{ student_email }}
-                                    {% endblocktrans %}
-                                {% else %}
-                                    {% trans "Learner Response" %}
-                                {% endif %}
-                            </h4>
-                        </header>
+<div class="staff-grade-message">
+    <p>{% trans "Give this learner a grade using the problem's rubric." %}</p>
+</div>
+{% for submission in submission_context_list %}
+    <div class="staff__grade__form collapse-grade-form" data-submission-uuid="{{ submission.submission.uuid }}">
+    <div class="wrapper--staff-assessment collapse-grade">
 
+
+        <div class="ui-accordion-wrapper">
+
+            <article class="staff-assessment">
+                <div class="staff-assessment__display ui-accordion-item">
+                    <header class="staff-assessment__display__header ui-accordion-header">
+                        {{ submission.submission }}
+                        <br>
+                        {{submission}}
+                        <h4 class="staff-assessment__display__title">
+                            {% if submission.student_email %}
+                            {% blocktrans %}
+                            Response for: {{ submission.student_email }}
+                            {% endblocktrans %}
+                            {% else %}
+                            {% trans "Learner Response" %}
+                            {% endif %}
+                        </h4>
+                        <span class="icon fa fa-close" aria-hidden="true"></span>
+                    </header>
+                    <div class="ui-accordion-body">
                         {% trans "The learner's response to the prompt above" as translated_label %}
-                        {% include "openassessmentblock/oa_submission_answer.html" with answer=submission.answer answer_text_label=translated_label %}
+                        {% include "openassessmentblock/oa_submission_answer.html" with answer=submission.submission.answer answer_text_label=translated_label %}
 
                         {% trans "Associated Files" as translated_header %}
-                        {% include "openassessmentblock/oa_uploaded_file.html" with file_upload_type=file_upload_type file_urls=staff_file_urls header=translated_header class_prefix="staff-assessment" show_warning="true" including_template="staff_grade_learners_assessment" xblock_id=xblock_id %}
+                        {% include "openassessmentblock/oa_uploaded_file.html" with file_upload_type=submission.file_upload_type file_urls=submission.staff_file_urls header=translated_header class_prefix="staff-assessment" show_warning="true" including_template="staff_grade_learners_assessment" xblock_id=submission.xblock_id %}
+
+                        <form class="staff-assessment__assessment" method="post">
+                            {% include "openassessmentblock/oa_rubric.html" with rubric_type="staff-full-grade" rubric_criteria=submission.rubric_criteria %}
+                        </form>
+
+                        <div>
+                            <div class="message message--inline message--error message--error-server" tabindex="-1">
+                                <h5 class="message__title">{% trans "We could not submit your assessment" %}</h5>
+                                <div class="message__content"></div>
+                            </div>
+
+                            <ul class="list list--actions">
+
+                                <li class="list--actions__item submit_assessment--action">
+                                    <button type="submit" class="action action--close">
+                                        {% trans "Skip" %}
+                                    </button>
+                                </li>
+
+                                <li class="list--actions__item submit_assessment--action">
+                                    <button type="submit" class="action action--return_back" disabled>
+                                        {% trans "Return back" %}
+                                    </button>
+                                </li>
+
+                                <li class="list--actions__item submit_assessment--action">
+                                    <button type="submit" class="action action--submit" disabled>
+                                        {% trans "Submit assessment" %}
+                                    </button>
+                                </li>
+
+                                <li class="list--actions__item submit_assessment--action">
+                                    <button type="submit" class="action action--submit continue_grading--action"
+                                            disabled>
+                                        {% trans "Submit assessment and continue grading" %}
+                                    </button>
+                                </li>
+                            </ul>
+                            <div class="staff-grade-error"></div>
+                        </div>
                     </div>
 
-                    <form class="staff-assessment__assessment" method="post">
-                        {% include "openassessmentblock/oa_rubric.html" with rubric_type="staff-full-grade" %}
-                    </form>
-                </article>
-            </div>
-
-            <div>
-                <div class="message message--inline message--error message--error-server" tabindex="-1">
-                    <h5 class="message__title">{% trans "We could not submit your assessment" %}</h5>
-                    <div class="message__content"></div>
                 </div>
-
-                <ul class="list list--actions">
-
-                    <li class="list--actions__item submit_assessment--action">
-                        <button type="submit" class="action action--return_back" disabled>
-                            {% trans "Return back" %}
-                        </button>
-                    </li>
-
-                    <li class="list--actions__item submit_assessment--action">
-                        <button type="submit" class="action action--submit" disabled>
-                            {% trans "Submit assessment" %}
-                        </button>
-                    </li>
-
-                    <li class="list--actions__item submit_assessment--action">
-                        <button type="submit" class="action action--submit continue_grading--action" disabled>
-                            {% trans "Submit assessment and continue grading" %}
-                        </button>
-                    </li>
-                </ul>
-                <div class="staff-grade-error"></div>
-            </div>
+            </article>
         </div>
     </div>
-{% endspaceless %}
 
+</div>
+{% endfor %}
+
+
+
+<script>
+    $(document).ready(function () {
+        $('.ui-accordion-header').on('click', function () {
+            $(this).next().slideToggle(300);
+            $('.ui-accordion-header').not($(this)).next().slideUp(300);
+        });
+
+        $('.action--close').on('click', function () {
+            $(this).closest('.ui-accordion-body').slideUp(300);
+        });
+    })
+</script>
+{% endspaceless %}
