--- a/openassessment/templates/openassessmentblock/staff_area/oa_staff_override_assessment.html
+++ b/openassessment/templates/openassessmentblock/staff_area/oa_staff_override_assessment.html
@@ -42,7 +42,7 @@
 
             <ul class="list list--actions">
                 <li class="list--actions__item">
-                    <button type="submit" class="action action--submit" disabled>
+                    <button type="submit" class="action action--submit">
                         {% trans "Submit assessment" %}
                     </button>
 
