--- a/openassessment/templates/openassessmentblock/staff_area/oa_staff_grade_learners_assessment.html
+++ b/openassessment/templates/openassessmentblock/staff_area/oa_staff_grade_learners_assessment.html
@@ -24,7 +24,7 @@
                     </header>
                     <div class="ui-accordion-body">
                         {% trans "The learner's response to the prompt above" as translated_label %}
-                        {% include "openassessmentblock/oa_submission_answer.html" with answer=submission.submission.answer answer_text_label=translated_label %}
+                        {% include "openassessmentblock/oa_submission_answer.html" with answer=submission.submission.answer answer_text_label=translated_label prompts_type=submission.prompts_type %}
 
                         {% trans "Associated Files" as translated_header %}
                         {% include "openassessmentblock/oa_uploaded_file.html" with file_upload_type=submission.file_upload_type file_urls=submission.staff_file_urls header=translated_header class_prefix="staff-assessment" show_warning="true" including_template="staff_grade_learners_assessment" xblock_id=submission.xblock_id %}
