--- a/openassessment/templates/openassessmentblock/instructor_dashboard/oa_listing.html
+++ b/openassessment/templates/openassessmentblock/instructor_dashboard/oa_listing.html
@@ -3,6 +3,16 @@
 <section class="open-response-assessment-block"
          data-item-view-enabled="{{ ora_item_view_enabled|yesno:'1,0' }}"
          data-rendered=0>
+
+    {% if cohort_info %}
+        <select class="input cohort-select" name="cohort-select" id="ora-cohort-select">
+            <option value="">Select a cohort</option>
+            {% for cohort in cohort_info %}
+                <option value="{{ cohort.id }}">{{ cohort.name }}</option>
+            {% endfor %}
+        </select>
+    {% endif %}
+
     <div class="open-response-assessment-msg">{% trans "Please wait" %}</div>
     <div class="open-response-assessment-content">
         <div class="open-response-assessment-summary"></div>
