--- a/openassessment/templates/openassessmentblock/response/oa_response.html
+++ b/openassessment/templates/openassessmentblock/response/oa_response.html
@@ -40,7 +40,7 @@
                 <p>
                     {% trans "Enter your response to the prompt." %}
                     {% if submission_due %}
-                    {% trans "You can save your progress and return to complete your response at any time before the due date" %}.
+                    {% trans "You can save your progress and return to complete your response at any time before the due date" %}
                     {% else %}
                     {% trans "You can save your progress and return to complete your response at any time." %}
                     {% endif %}
